@@ -76,6 +76,7 @@ throws TextParseException
 {
 	NXTRecord rec = new NXTRecord(name, dclass, ttl);
 	rec.next = Name.fromString(st.nextToken(), origin);
+	rec.next.checkAbsolute("read an NXT record");
 	rec.bitmap = new BitSet();
 	while (st.hasMoreTokens()) {
 		short t = Type.value(st.nextToken());
